@@ -1,3 +1,5 @@
+2014-11-23 1.0.1 XMLTV generator 'TVH_W' supported
+
 2014-09-01 1.0.0 Mobile version for record management 
                  Auto redirect for iOS and Android Mobile
                  Full Python 2.6.6/2.7/3 support
